--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.emptycatch.unitylibrary": "https://github.com/Komorio/Unity-Library.git#upm",
     "com.unity.2d.animation": "4.2.4",
     "com.unity.2d.pixel-perfect": "3.0.2",
     "com.unity.2d.psdimporter": "3.1.4",
